# remix-with-grpc-dev

./: .gitignore  README.md  lefthook.yml
client/: biome.json  buf.gen.yaml  components.json  package-lock.json  package.json  tailwind.config.ts  vite.config.ts  vitest.config.ts
client/app/: entry.client.tsx  root.tsx  tailwind.css
client/app/__tests__/: forum.test.tsx  login.test.tsx  vitest-setup.ts
client/app/components/: ChatHeader.tsx  ChatSideBar.tsx  ChatSummary.tsx  Header.tsx  MessageBox.tsx  MessageEdit.tsx  PostContents.tsx  PostEdit.tsx
client/app/components/ui/: ButtonIcon.tsx  DynamicDateFormat.tsx  avatar.tsx  card.tsx
client/app/icons/: IconBxSend.tsx
client/app/mocks/: handlers.ts
client/app/mocks/response/: POSTS_DATA.json
client/app/routes/: _index.tsx  chat.$channel.tsx  chat._index.tsx  chat.tsx  forum.$forumId.tsx  login.tsx
client/app/utils/: getImage.ts
client/services/: chat_connect.ts  chat_pb.ts  forum_connect.ts  forum_pb.ts  greeting_connect.ts  greeting_pb.ts
proto/: chat.proto  forum.proto  greeting.proto
server/: Cargo.toml  build.rs
server/src/: main.rs
