[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.12.6"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "rt", "macros"] }
tokio-stream = "0.1"
tonic = "0.11.0"
tonic-web = "0.11.0"
tower-http = { version = "0.4", features = ["cors"] }
futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"
chrono = "0.4"

[build-dependencies]
tonic-build = "0.11.0"
